--- a/social_network/social_network/templates/registration/index.html
+++ b/social_network/social_network/templates/registration/index.html
@@ -10,7 +10,7 @@
       <div class="bd-example">
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block w-100 rounded" src="{{MEDIA_URL}}static/image/pineapples.jpg" alt="First slide">
+              <img class="d-block w-100 rounded" src="{{MEDIA_URL}}static/image/index.jpg" alt="First slide">
               <div class="carousel-caption d-none d-md-block text-shadow font-weight-bolder">
                 <h1>Final Project for TSM</h1>
                 <p>█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█ █═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═█ █═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═█ █═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═█ █═╦═╩═╦═СТЕНА ПОЗОРА╩╦═╩═╦═╩═█ █═╩═╦═╩═╦═╩ Андрея ═╦═╩╩══╦═╩═█ █═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═█ █═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═█ █═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═█ █▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█</p>
