--- a/social_network/social_network/templates/base.html
+++ b/social_network/social_network/templates/base.html
@@ -21,7 +21,7 @@
    <div class="container">
     <nav class="navbar fixed-bottom navbar-dark bg-dark">
       <div class="justify-content-center text-white">
-        <p>For TSM. AndreiKarpovich
+        <p>For TMS. AndreiKarpovich
         
 
       </div>
