--- a/social_network/social_network/templates/registration/index.html
+++ b/social_network/social_network/templates/registration/index.html
@@ -12,7 +12,7 @@
             <div class="carousel-item active">
               <img class="d-block w-100 rounded" src="{{MEDIA_URL}}static/image/index.jpg" alt="First slide">
               <div class="carousel-caption d-none d-md-block text-shadow font-weight-bolder">
-                <h1>Final Project for TSM</h1>
+                <h1>Final Project for TMS</h1>
                 <p>█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█ █═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═█ █═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═█ █═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═█ █═╦═╩═╦═СТЕНА ПОЗОРА╩╦═╩═╦═╩═█ █═╩═╦═╩═╦═╩ Андрея ═╦═╩╩══╦═╩═█ █═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═█ █═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═█ █═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═╩═╦═█ █▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█</p>
                 <a href="{% url 'registration:login' %}">Войди</a> или
                 <a href="{% url 'registration:register' %}">Зарегистрируйся</a>
